@startuml

hide circle
skinparam classAttributeIconSize 0

    class CommandsOnTutorialClassList {
        +execute(parts: String, tutorialClassList: TutorialClassList): void
    }

    interface "<<interface>> \n Command<T>" {
        +execute(input: String, context: T): void
    }


    class TutorialClass {
        +getStartTime(): LocalTime
        +getStudentList(): StudentList
    }

    class TutorialClassList {
        +getTutorialByName(name: String): TutorialClass
    }

    class Student {
        +setRemark(remark: String): void
    }

    class StudentList {
        +getStudentByMatricNumber(matricNumber: String): Student
    }


    class TASyncException extends Exception {
        +invalidGenericCommand(): TASyncException
    }

' Relationships
"<<interface>> \n Command<T>" <|.. CommandsOnTutorialClassList : <<implements>>
CommandsOnTutorialClassList --> TutorialClassList
CommandsOnTutorialClassList --> TutorialClass
CommandsOnTutorialClassList --> StudentList
StudentList --> Student
CommandsOnTutorialClassList --> TASyncException
@enduml